#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(libDNSLog, 0.9_BETA, calle@autonomica.se)
AC_CONFIG_SRCDIR([DNSLog.c])
AC_CONFIG_HEADER([config.h])
AC_SUBST(VERSION,[0.9_BETA])

# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

LD_SQLITE3=`pkg-config  --libs-only-L sqlite3`
CF_SQLITE3=`pkg-config --cflags sqlite3`
CFLAGS="$CFLAGS $CF_SQLITE3"
LDFLAGS="$LDFLAGS $LD_SQLITE3"

AC_SUBST(L_SQLITE3,[$LD_SQLITE3])
AC_SUBST(C_SQLITE3,[$CF_SQLITE3])


# Checks for libraries.
AC_CHECK_LIB([sqlite3], [sqlite3_prepare_v2],,
			[AC_MSG_ERROR([Cannot find sqlite3 lib, please make sure it is installed and right version])])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h netinet/in.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])
AC_CHECK_HEADERS([sqlite3.h],,[AC_MSG_ERROR([Cannot find sqlite3.h is the path right?])])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS(inet_ntoa strndup)

AC_CONFIG_FILES([Makefile] [DNSLog.pc])
AC_OUTPUT
